fix: the header spacing on logged state

--- a/assets/scss/critical/_admin-bar.scss
+++ b/assets/scss/critical/_admin-bar.scss
@@ -12,6 +12,12 @@
 		.site-header {
 			top: 32px !important;
 		}
+
+		main,
+		.site-main {
+			margin-top: 68px !important;
+			margin-block-start: 68px !important;
+		}
 	}
 }
 .has-modal-open
